@startuml
package moteurJeu {

interface Jeu{
+ init() : void
+ update(seconds: double, clavier: Clavier)
+ etreFini(): boolean
}


interface DessinJeu {
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}

package gameLaby{

class LabyJeu{
+ {static} WIDTH : int
+ {static} HEIGHT : int
+ {static} FICHIER : String
- fin : boolean
+ LabyJeu()
+ init() : void
+ update(seconds: double, clavier: Clavier) : void
+ etreFini(): boolean
+ getLabyrinthe() : Labyrinthe
}

class Labyrinthe {
  + {static} MUR : char
  + {static} PJ : char
  + {static} MONSTRE : char
  + {static} VIDE : char
  + {static} BOMBE : char
  + {static} HAUT : String
  + {static} BAS  : String
  + {static} GAUCHE : String
  + {static} DROITE : String
  + murs : boolean[][]
  + Labyrinthe(String)
  + {static} getSuivant(int, int, String) : int[]
  + deplacerPerso(String) : void
  + etreFini() : boolean
  + getLengthY() : int
  + getLength() : int
  + getMur(int, int) : boolean
  + getMonstre(int, int) : Monstre
  + verifierMonstre()
  + getPerso(int, int) : Perso
  + deplacerMonstres()
  + majPos(int, int[])
}


Jeu <|.. LabyJeu


LabyJeu "1" --> "1" Labyrinthe : -labyrinthe


class LabyDessin{
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}

DessinJeu <|.. LabyDessin
LabyJeu <. LabyDessin:uses

class Perso {
  - x : int
  - y : int
  - vie : int
  + Perso(int, int, int)
  + etrePresent(int, int) : boolean
  + getX() : int
  + getY() : int
  + getVie() : int
  + subirDegats(int)
}


class Monstre extends Perso {
  - degats : int
  + Monstre(int, int, int, int)
  + infligerDegat() : int
}
class Bombe extends Perso {
  + Bombe(int, int, int)
  + mettreDegat(Perso p)
  + explose()
}
class Joueur extends Perso{
  - attaqueEnCours : boolean
  + Joueur(int, int, int)
  + reinitialiserAttaque() : void
  + getAttaqueEnCours() : boolean
  + setAttaqueEnCours() : void
}

class Item #pink {
  - DansInventaire : boolean
  - x : int
  - y : int
}

class Bouclier #pink extends Item {
  - vie : int
}

Labyrinthe "*" -> "*" Item : + items
Labyrinthe "*" -> "*" Perso : + peros
}
@enduml